fixed footer links on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1655,6 +1655,7 @@ a:active {
 
     .footer-inner {
         margin-top: 30px;
+        z-index: 2;
     }
         .footer-inner .heading {
             margin-top: 30px;
